# machine-learning-notes

./: Pipfile  README.md  pyproject.toml
data-structures/: Arrays.ipynb  Binary-Trees.ipynb  Interview-Cake-Problems.ipynb  Linked-Lists.ipynb  Lists.ipynb  Primitives.ipynb  Strings.ipynb
data-structures/.ipynb_checkpoints/: Primitives-checkpoint.ipynb
deep-learning/.ipynb_checkpoints/: feedforward-network-checkpoint.ipynb
shallow-learning/: naive-bayes-classifier.ipynb
shallow-learning/.ipynb_checkpoints/: random-forests-checkpoint.ipynb
