[tool.poetry]
name = "machine-learning-notes"
version = "0.1.0"
description = "Notes and examples from machine learning"
authors = ["bdeignan <deignan.brian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
pandas = "^1.0.4"
scikit-learn = "^0.23.1"
scipy = "^1.4.1"
black = "^19.10b0"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
